...
    fun convert(input: String, isComplete: Boolean = true): Conversion {
        val result = StringBuilder()
        val rawBoundaries = mutableListOf(0)
        val hiraganaBoundaries = mutableListOf(0)
        var i = 0
        while (i < input.length) {
            val remaining = input.length - i

            val threeChar = if (remaining >= 3) input.substring(i, i + 3) else null
            val twoChar = if (remaining >= 2) input.substring(i, i + 2) else null
            val current = input[i]
            val next = if (remaining >= 2) input[i + 1] else null

...
